<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_listado_pacientes"
                android:icon="@drawable/ic_list_white_24dp"
                android:title="@string/nav_listado_pacientes" />
            <item
                android:id="@+id/nav_registrar_paciente"
                android:icon="@drawable/ic_person_add_white_24dp"
                android:title="@string/nav_registrar_paciente" />
            <item
                android:id="@+id/nav_prediccion_paciente"
                android:icon="@drawable/ic_help_outline_white_24dp"
                android:title="@string/nav_prediccion_paciente" />
            <item
                android:id="@+id/nav_clasificacion_graficas"
                android:icon="@drawable/ic_show_chart_white_24dp"
                android:title="@string/nav_clasificacion_graficas" />
    </group>

</menu>
