<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.brandon.chavez.android.app.sngapp.UsuarioRegistrar"
    tools:showIn="@layout/activity_usuario_registrar">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="210dp">

        <ImageView
            android:id="@+id/ivImagenUsuarioRegistrar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/vacio"
            android:src="@drawable/ic_account_grey600_48dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabImagenUsuarioRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:layout_marginEnd="50dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add_a_photo_white_24dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:background="#AAAAAA"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_tipo_usuario_registrar" />

                    <Spinner
                        android:id="@+id/spTipoUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:entries="@array/ur_sp_tipo_usuario_registrar"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_cedula_usuario_registrar" />

                    <EditText
                        android:id="@+id/etCodigoUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/ur_et_cedula_usuario_registrar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_nombre_usuario_registrar" />

                    <EditText
                        android:id="@+id/etNombreUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/ur_et_nombre_usuario_registrar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_apellido_usuario_registrar" />

                    <EditText
                        android:id="@+id/etApellidoUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/ur_et_apellido_usuario_registrar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_genero_usuario_registrar" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbFemeninoUsuarioRegistrar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/ur_rb_femenino_usuario_registrar" />

                        <RadioButton
                            android:id="@+id/rbMasculinoUsuarioRegistrar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ur_rb_masculino_usuario_registrar" />
                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_email_usuario_registrar" />

                    <EditText
                        android:id="@+id/etEmailUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/ur_et_email_usuario_registrar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_password_usuario_registrar" />

                    <EditText
                        android:id="@+id/etPasswordUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/ur_et_password_usuario_registrar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ur_tv_confirmar_password_usuario_registrar" />

                    <EditText
                        android:id="@+id/etConfirmarPasswordUsuarioRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/ur_et_confirmar_password_usuario_registrar" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
