<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.brandon.chavez.android.app.sngapp.fragments.PacienteModificar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecundary"
                    android:text="@string/pr_tv_paciente_nombre" />

                <EditText
                    android:id="@+id/etNombrePacienteModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/pr_et_paciente_nombre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecundary"
                    android:text="@string/pr_tv_paciente_apellido" />

                <EditText
                    android:id="@+id/etApellidoPacienteModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/pr_et_paciente_apellido" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecundary"
                    android:text="@string/pr_tv_paciente_email" />

                <EditText
                    android:id="@+id/etEmailPacienteModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/pr_et_paciente_email" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <Button
        android:id="@+id/bGuardarPacienteModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorBackground"
        android:background="@color/colorPrimary"
        android:text="Enviar modificaciones" />

</FrameLayout>
